<resources>
    <string name="app_name">DemoApplication</string>
    <string name="no_internet_alert">No internet connection available</string>
    <string name="name">Name</string>
    <string name="username">User Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="internet_connected">Internet connected successfully</string>
</resources>