<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="itemUserModel"
            type="com.example.userapplication.viewmodel.ItemUserViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_small"
        android:layout_marginRight="@dimen/padding_small"
        android:layout_marginBottom="@dimen/padding_small"
        app:cardCornerRadius="@dimen/margin_medium"
        app:cardElevation="6dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_medium">

            <TextView
                android:id="@+id/name"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:fontFamily="@font/karla_bold"
                android:text="@string/name"
                android:textColor="#505050"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_toEndOf="@+id/name"
                android:fontFamily="@font/karla_regular"
                android:text="@{itemUserModel.name}"
                android:textColor="#505050"
                android:textSize="@dimen/text_xlarge"
                tool:text="Vishal Shinde" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/karla_bold"
                android:text="@string/username"
                android:textColor="#505050"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_toEndOf="@+id/userName"
                android:fontFamily="@font/karla_regular"
                android:text="@{itemUserModel.userName}"
                android:textColor="#505050"
                android:textSize="@dimen/text_xlarge"
                tool:text="Vish" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userName"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/karla_bold"
                android:text="@string/phone"
                android:textColor="#505050"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userName"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_toEndOf="@+id/phone"
                android:fontFamily="@font/karla_regular"
                android:text="@{itemUserModel.phone}"
                android:textColor="#505050"
                android:textSize="@dimen/text_xlarge"
                tool:text="789456123" />

            <TextView
                android:id="@+id/email"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/karla_bold"
                android:text="@string/email"
                android:textColor="#505050"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_toEndOf="@+id/email"
                android:fontFamily="@font/karla_regular"
                android:text="@{itemUserModel.email}"
                android:textColor="#505050"
                android:textSize="@dimen/text_xlarge"
                tool:text="vishalshinde4376@gmail.com" />

            <TextView
                android:id="@+id/address"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/karla_bold"
                android:text="@string/address"
                android:textColor="#505050"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:maxLines="2"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_toEndOf="@+id/address"
                android:fontFamily="@font/karla_regular"
                android:text="@{itemUserModel.address}"
                android:textColor="#505050"
                android:textSize="@dimen/text_xlarge"
                tool:text="Dange chowk ,Pune" />
            <TextView
                android:id="@+id/website"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_address"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/karla_bold"
                android:text="@string/website"
                android:textColor="#505050"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_address"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_toEndOf="@+id/website"
                android:fontFamily="@font/karla_regular"
                android:text="@{itemUserModel.website}"
                android:textColor="#505050"
                android:textSize="@dimen/text_xlarge"
                tool:text="www.google.com" />


            <TextView
                android:id="@+id/company"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/website"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/karla_bold"
                android:text="@string/company"
                android:textColor="#505050"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/website"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_toEndOf="@+id/company"
                android:fontFamily="@font/karla_regular"
                android:text="@{itemUserModel.company}"
                android:textColor="#505050"
                android:textSize="@dimen/text_xlarge"
                tool:text="vishal tec pvt.ltd." />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</layout>
